moving files to external style sheet

--- a/facebook.html
+++ b/facebook.html
@@ -2,75 +2,49 @@
 <html>
 <head>
 	<title>My facebook</title>
-	<style type="text/css">
-		*{margin: 0;padding: 0;}
-		#header{background-color: #3b5998;
-				color: white;}
-		#header_inner{width: 1000px;
-						margin-right: auto;
-						margin-left: auto;
-						}
-		#content{background-color: #e0e4ef;}
-		#content_inner{width: 1000px;
-						margin-right: auto;
-						margin-left: auto;
-						}		
-		#footer_inner{width: 1000px;
-						margin-right: auto;
-						margin-left: auto;
-						}		
-		a:link{text-decoration: none;
-				color: #365899;}	
-		
-	</style>
+	<link rel="stylesheet" type="text/css" href="facebook.css">
 </head>
 <body>
 	<div id="header">
 		<div id="header_inner">
-			<div id="logo" 
-				style="width: 500px;
-				float: left;">
-				<h1 style="font-family: sans-serif;padding-top: 30px;
-				">facebook</h1>
+			<div id="logo">
+				<h1>facebook</h1>
 			</div>
-			<div id="log_in_details" style="width: 350px;float: left;margin-left: 150px;">
+			<div id="log_in_details">
 					<div id="log_in_details_inner">
-						<div 
-						style="float: left;padding-top: 10px;margin-right: 10px;">
+						<div class="header_input">
 							<label>Email or phone</label>
-							<input type="text" name="Email or phone" 
-							style="display: block;width: 140px;">
+							<input type="text" name="Email or phone">
 						</div>
-						<div 
-							style="float: left;padding-top: 10px;margin-right: 10px;">
+						<div class="header_input">
 							<label>Password</label>
-							<input type="Password" name="Password" style="display: block;width: 140px;">
-							<a href="#" style="color: #9cb4c4;">Forgotten account?</a>
+							<input type="Password" name="Password">
+							<a href="#">Forgotten account?</a>
 						</div>
-						<div style="padding-top: 25px;">
-							<a href="#" style="color: #9cb4c4;">Log in</a>
+						<div class="login_button">
+							<a href="#">Log in</a>
 						</div>	
 					</div>
 			</div>
-			<div style="clear: both;"></div>
+			<div class="float_solver"></div>
 		</div>
 	</div>
 
 	<div id="content">
 		<div id="content_inner">
-			<div style="float: left;width: 500px; padding-top: 50px; margin-right: 100px;">
+			<div class="message">
 				<h2>Facebook helps you connect and share with the people in your life</h2>
 				<img src="capture.jpg">
 			</div>
-			<div style="float: left;width: 400px; padding-top: 40px;">
-				<h1 style="padding-bottom: 10px;">Create an account</h1>
-				<h3 style="padding-bottom: 10px;">It's free and always be.</h3>
-				<div style="padding-bottom: 10px;">
+			<div class="sign_up_side">
+				<h1>Create an account</h1>
+				<h3>It's free and always be.</h3>
+				<div>
 					<input type="text" name="first name" placeholder=" First name" style="margin-right: 28px;width: 180px; font-size: 20px;border-radius: 6px;">
 					<input type="text" name="surname" placeholder=" Surname" style="width: 180px;font-size: 20px;border-radius: 6px;">
 				</div>
 				<input type="text" name="mobile number or email address" placeholder=" Mobile number or email address" style="margin-bottom: 10px;font-size: 20px;width: 398px;border-radius: 6px;">
-				<input type="Password" name="new Password" placeholder=" New password" style="display: block;margin-bottom: 10px;font-size: 20px;width: 398px;border-radius: 6px;">
+				<input type="Password" name="new Password" placeholder=" New password" style="margin-bottom: 10px;font-size: 20px;width: 398px;border-radius: 6px;">
 				<div>
 					<div>
 						<label>Birthday</label>
@@ -144,11 +118,11 @@
 				</div>
 				<strong style="margin-bottom: 30px;"><a href="#">Create a Page</a> for a celebrity, band or business</strong>
 			</div>
-			<div style="clear: both;margin-bottom: 30px;"></div>
+			<div style="margin-bottom: 30px;" class="float_solver"></div>
 		</div>
 	</div>
 
-	<div id="footer" style="clear: both;">
+	<div id="footer" class="float_solver">
 		<div id="footer_inner">
 			<div style="padding-bottom: 20px;">
 				<a href="#">English(UK)</a>&nbsp;
@@ -196,7 +170,7 @@
 			<br>
 			<a href="#">account security</a>&nbsp;
 			<a href="#">login help</a>&nbsp;
-			<a href="#">help</a>&nbsp;s
+			<a href="#">help</a>&nbsp;
 			</div>
 			
 		</div>
