--- a/facebook.html
+++ b/facebook.html
@@ -43,8 +43,8 @@
 					<input type="text" name="first name" placeholder=" First name" style="margin-right: 28px;width: 180px; font-size: 20px;border-radius: 6px;">
 					<input type="text" name="surname" placeholder=" Surname" style="width: 180px;font-size: 20px;border-radius: 6px;">
 				</div>
-				<input type="text" name="mobile number or email address" placeholder=" Mobile number or email address" style="margin-bottom: 10px;font-size: 20px;width: 398px;border-radius: 6px;">
-				<input type="Password" name="new Password" placeholder=" New password" style="margin-bottom: 10px;font-size: 20px;width: 398px;border-radius: 6px;">
+				<input type="text" name="mobile number or email address" placeholder=" Mobile number or email address">
+				<input type="Password" name="new Password" placeholder=" New password">
 				<div>
 					<div>
 						<label>Birthday</label>
