one more slight change

--- a/facebook.html
+++ b/facebook.html
@@ -34,7 +34,7 @@
 		<div id="content_inner">
 			<div class="message">
 				<h2>Facebook helps you connect and share with the people in your life</h2>
-				<img src="capture.jpg">
+				<img src="Capture.JPG">
 			</div>
 			<div class="sign_up_side">
 				<h1>Create an account</h1>
