worked on sign up and log in buttons

--- a/facebook.html
+++ b/facebook.html
@@ -21,8 +21,10 @@
 							<input type="Password" name="Password">
 							<a href="#">Forgotten account?</a>
 						</div>
-						<div class="login_button">
-							<a href="#">Log in</a>
+						<div >
+							<label id="login_button">
+							<input type="submit" name="log in" value="Log In" class="login_button">
+							</label>
 						</div>	
 					</div>
 			</div>
@@ -112,8 +114,8 @@
 					<label for="Male">Male</label> 
 				</div>
 				<p>By clicking sign up, you agree to our <a href="#">Terms</a>,<a href="#">Data Policy</a> and <a href="#">Cookie Policy.</a>You may receive SMS notifications from us and can opt out at any time.</p>
-				<div class="sign_up_button">
-					<input type="submit" name="sign up" value="sign up">
+				<div >
+					<input type="submit" name="sign up" value="Sign Up" class="sign_up_button">
 				</div>
 				<strong class="some_space_under"><a href="#">Create a Page</a> for a celebrity, band or business</strong>
 			</div>
