--- a/facebook.html
+++ b/facebook.html
@@ -49,7 +49,7 @@
 				<input type="Password" name="new Password" placeholder=" New password">
 				<div>
 					<div>
-						<label>Birthday</label>
+						<label><strong>Birthday</strong></label>
 					</div>
 					<div class="date_of_birth">
 						<select id="day">
